--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
@@ -45,7 +45,7 @@
 }
 
 .category-list__item {
-    gap: 1rem;
+    gap: $spacing-3;
     padding: 0 $spacing-1 0 $spacing-1;
     transition: background-color $basic-speed;
     height: 40px;
