--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -4,7 +4,7 @@
     </app-header>
         
     <main class="container flex flex-col gap-8 m-auto">
-        <dotcms-layout [pageAsset]="context()?.pageAsset || {}" [components]="components()" />
+        <dotcms-layout [pageAsset]="context()?.pageAsset" [components]="components()" />
     </main>
     
     <app-footer />
