--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,24 +1,23 @@
-@if (values.length) {
-    <div class="dot-category-field__categories" data-testId="category-chip-list">
-        @for (category of values; track category.id) {
-            <p-chip
-                [pTooltip]="category.value"
-                [removable]="true"
-                [label]="category.value"
-                tooltipPosition="top"
-                styleClass="p-chip-sm" />
-        }
-    </div>
+@if (store.selectedCategories().length) {
+<div class="dot-category-field__categories" data-testId="category-chip-list">
+    @for (category of store.categoriesValue(); track category.key) {
+    <p-chip
+        [pTooltip]="category.value"
+        [removable]="true"
+        [label]="category.value"
+        tooltipPosition="top"
+        styleClass="p-chip-sm" />
+    }
+</div>
 }
 
 <div class="dot-category-field__select">
     <button
         (click)="showCategoriesSidebar()"
         [disabled]="disableSelectCategoriesButton()"
-        [label]="'edit.content.category-field.button.show-categories' | dm"
+        [label]="'edit.content.category-field.show-categories-dialog' | dm"
         class="p-button-sm p-button-text p-button-secondary"
         data-testId="show-sidebar-btn"
         pButton></button>
 </div>
-
-<ng-container dotDynamic></ng-container>
+<ng-container data-testId="sidebar-placeholder" dotDynamic></ng-container>
