--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-field/dot-edit-content-field.component.html
@@ -8,29 +8,19 @@
 
 @switch (field.fieldType) {
     @case (fieldTypes.SELECT) {
-        <dot-edit-content-select-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-select-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.RADIO) {
-        <dot-edit-content-radio-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-radio-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.TEXT) {
-        <dot-edit-content-text-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-text-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.TEXTAREA) {
-        <dot-edit-content-text-area
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-text-area [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.CHECKBOX) {
-        <dot-edit-content-checkbox-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-checkbox-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.MULTI_SELECT) {
         <dot-edit-content-multi-select-field
@@ -38,19 +28,13 @@
             [attr.data-testId]="'field-' + field.variable" />
     }
     @case (calendarTypes.includes(field.fieldType) ? field.fieldType : '') {
-        <dot-edit-content-calendar-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-calendar-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.TAG) {
-        <dot-edit-content-tag-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-tag-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.JSON) {
-        <dot-edit-content-json-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-json-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.BINARY) {
         <dot-edit-content-binary-field
@@ -78,9 +62,7 @@
             [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.WYSIWYG) {
-        <dot-edit-content-wysiwyg-field
-            [field]="field"
-            [attr.data-testId]="'field-' + field.variable" />
+        <dot-edit-content-wysiwyg-field [field]="field" [attr.data-testId]="'field-' + field.variable" />
     }
     @case (fieldTypes.HOST_FOLDER) {
         <dot-edit-content-host-folder-field
@@ -90,6 +72,7 @@
     @case (fieldTypes.CATEGORY) {
         <dot-edit-content-category-field
             [attr.data-testId]="'field-' + field.variable"
+            [contentlet]="contentlet"
             [field]="field" />
     }
 }
