Updated icon from add to edit

--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-device-selector-seo/dot-device-selector-seo.component.html
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-device-selector-seo/dot-device-selector-seo.component.html
@@ -20,7 +20,7 @@
                     [queryParams]="linkToEditDeviceQueryParams"
                     data-testId="dot-device-link-add">
                     <p-button
-                        icon="pi pi-plus"
+                        icon="pi pi-pencil"
                         styleClass="p-button-rounded p-button-text"></p-button>
                 </a>
             </div>
