--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.scss
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.scss
@@ -8,6 +8,7 @@
     ::ng-deep {
         p-table {
             flex-grow: 1;
+            padding-bottom: $spacing-3;
 
             .dotTable.p-datatable.p-component {
                 height: 100%;
