--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-shell/dot-locales-shell.component.scss
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-shell/dot-locales-shell.component.scss
@@ -2,7 +2,8 @@
 
 :host {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
+    overflow: auto;
     background: $white;
     display: flex;
     padding: $spacing-3 $spacing-4;
