--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-gallery/ai-image-prompt-gallery.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-gallery/ai-image-prompt-gallery.component.html
@@ -41,7 +41,7 @@
     [showItemNavigators]="images?.length > 1"
     [showThumbnails]="false"
     [value]="images"
-    visible="true">
+    [visible]="true">
     <ng-template pTemplate="item" let-item>
         <p-image
             *ngIf="item.response; else errorMessage"
