upgrade(chore) fix breadcrumb

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
@@ -34,3 +34,18 @@
 .p-breadcrumb .p-breadcrumb-list li:last-child .p-menuitem-text {
     color: $color-palette-gray-700;
 }
+
+.p-breadcrumb .p-breadcrumb-list li:nth-child(2) {
+    &:before {
+        content: "";
+        width: 1px;
+        height: 20px;
+        background: $color-palette-gray-500;
+        display: block;
+        margin: 0 $spacing-1;
+    }
+
+    .p-icon-wrapper {
+        display: none;
+    }
+}
