implementation (locales): remember order

--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/dot-locales-list.component.html
@@ -19,6 +19,8 @@
     <p-table
         [value]="vm.locales"
         [globalFilterFields]="['isoCode', 'language', 'country']"
+        stateStorage="session"
+        stateKey="state-locales-session"
         #dt
         styleClass="dotTable">
         <ng-template pTemplate="header">
