prevent user to enter a page that doesnt exist

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/components/dot-ema-dialog/dot-ema-dialog.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/components/dot-ema-dialog/dot-ema-dialog.component.html
@@ -9,7 +9,8 @@
     [modal]="true"
     appendTo="body"
     data-testId="dialog"
-    styleClass="edit-ema-dialog">
+    styleClass="edit-ema-dialog"
+    (onHide)="onHide()">
     <ng-container [ngSwitch]="ds.type">
         <dot-ema-form-selector
             *ngSwitchCase="'form'"
