--- a/core-web/libs/ui/src/lib/dot-tab-buttons/dot-tab-buttons.component.html
+++ b/core-web/libs/ui/src/lib/dot-tab-buttons/dot-tab-buttons.component.html
@@ -1,40 +1,42 @@
 <div class="dot-tab-buttons">
     @for (item of _options; track $index) {
-    <div class="dot-tab-buttons__container">
-        <div class="dot-tab" data-testId="dot-tab-container">
-            <button
-                (click)="onClickOption($event, item.value.id)"
-                [ngClass]="{
-                    'dot-tab--active': activeId === item.value.id,
-                    'dot-tab__button--right': item.value.showDropdownButton
-                }"
-                [value]="item.value.id"
-                [disabled]="item.disabled"
-                [attr.aria-disabled]="item.disabled"
-                [pTooltip]="'editpage.toolbar.' + item.label.toLowerCase() + '.page.clipboard' | dm"
-                class="dot-tab__button"
-                data-testId="dot-tab-button-text"
-                tooltipPosition="bottom">
-                {{ item.label }}
-            </button>
-            @if (item.value.showDropdownButton) {
-            <button
-                (click)="onClickDropdown($event, item.value.id)"
-                [disabled]="item.disabled"
-                [attr.aria-disabled]="item.disabled"
-                [ngClass]="{ 'dot-tab-dropdown--active': activeId === item.value.id }"
-                class="dot-tab__dropdown"
-                data-testId="dot-tab-button-dropdown">
-                <i
-                    [class]="item.value.toggle ? dropDownOpenIcon : dropDownCloseIcon"
-                    class="dot-tab-dropdown__icon pi"
-                    data-testId="dot-tab-icon"></i>
-            </button>
+        <div class="dot-tab-buttons__container">
+            <div class="dot-tab" data-testId="dot-tab-container">
+                <button
+                    (click)="onClickOption($event, item.value.id)"
+                    [ngClass]="{
+                        'dot-tab--active': activeId === item.value.id,
+                        'dot-tab__button--right': item.value.showDropdownButton
+                    }"
+                    [value]="item.value.id"
+                    [disabled]="item.disabled"
+                    [attr.aria-disabled]="item.disabled"
+                    [pTooltip]="
+                        'editpage.toolbar.' + item.label.toLowerCase() + '.page.clipboard' | dm
+                    "
+                    class="dot-tab__button"
+                    data-testId="dot-tab-button-text"
+                    tooltipPosition="bottom">
+                    {{ item.label }}
+                </button>
+                @if (item.value.showDropdownButton) {
+                    <button
+                        (click)="onClickDropdown($event, item.value.id)"
+                        [disabled]="item.disabled"
+                        [attr.aria-disabled]="item.disabled"
+                        [ngClass]="{ 'dot-tab-dropdown--active': activeId === item.value.id }"
+                        class="dot-tab__dropdown"
+                        data-testId="dot-tab-button-dropdown">
+                        <i
+                            [class]="item.value.toggle ? dropDownOpenIcon : dropDownCloseIcon"
+                            class="dot-tab-dropdown__icon pi"
+                            data-testId="dot-tab-icon"></i>
+                    </button>
+                }
+            </div>
+            @if (activeId === item.value.id) {
+                <div class="dot-tab-indicator" data-testId="dot-tab-button"></div>
             }
         </div>
-        @if (activeId === item.value.id) {
-        <div class="dot-tab-indicator" data-testId="dot-tab-button"></div>
-        }
-    </div>
     }
 </div>
