--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-preview/dot-binary-field-preview.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-preview/dot-binary-field-preview.component.html
@@ -2,40 +2,44 @@
     [ngClass]="{ 'preview-container--fade': this.metadata?.editableAsText }"
     class="preview-container">
     @if (this.metadata?.editableAsText) {
-    <div (click)="this.editFile.emit()" class="preview-code_container" data-testId="code-preview">
-        <code>{{ content() }}</code>
-    </div>
+        <div
+            (click)="this.editFile.emit()"
+            class="preview-code_container"
+            data-testId="code-preview">
+            <code>{{ content() }}</code>
+        </div>
     } @else {
-    <div class="preview-image__container">
-        @if (tempFile) {
-        <dot-temp-file-thumbnail
-            [tempFile]="tempFile"
-            [iconSize]="'48px'"
-            data-testId="temp-file-thumbnail"></dot-temp-file-thumbnail>
-        } @else {
-        <dot-contentlet-thumbnail
-            [fieldVariable]="contentlet.fieldVariable"
-            [iconSize]="'48px'"
-            [contentlet]="contentlet"
-            [playableVideo]="true"
-            data-testId="contentlet-thumbnail">
-        </dot-contentlet-thumbnail>
-        }
-    </div>
-    <div class="preview-metadata__container">
-        <span class="preview-metadata_header">{{ title }}</span>
-        @if (metadata.width && metadata.height) {
-        <div class="preview-metadata">
-            <i class="pi pi-arrows-alt"></i>
-            <span>{{ metadata.width }} x {{ metadata.height }}</span>
+        <div class="preview-image__container">
+            @if (tempFile) {
+                <dot-temp-file-thumbnail
+                    [tempFile]="tempFile"
+                    [iconSize]="'48px'"
+                    data-testId="temp-file-thumbnail"></dot-temp-file-thumbnail>
+            } @else {
+                <dot-contentlet-thumbnail
+                    [fieldVariable]="contentlet.fieldVariable"
+                    [iconSize]="'48px'"
+                    [contentlet]="contentlet"
+                    [playableVideo]="true"
+                    data-testId="contentlet-thumbnail">
+                </dot-contentlet-thumbnail>
+            }
         </div>
-        } @if (metadata.fileSize) {
-        <div class="preview-metadata">
-            <i class="pi pi-file"></i>
-            <span>{{ metadata.fileSize | dotFileSizeFormat }}</span>
+        <div class="preview-metadata__container">
+            <span class="preview-metadata_header">{{ title }}</span>
+            @if (metadata.width && metadata.height) {
+                <div class="preview-metadata">
+                    <i class="pi pi-arrows-alt"></i>
+                    <span>{{ metadata.width }} x {{ metadata.height }}</span>
+                </div>
+            }
+            @if (metadata.fileSize) {
+                <div class="preview-metadata">
+                    <i class="pi pi-file"></i>
+                    <span>{{ metadata.fileSize | dotFileSizeFormat }}</span>
+                </div>
+            }
         </div>
-        }
-    </div>
     }
 
     <div class="preview-resource-links__actions">
@@ -60,23 +64,23 @@
             data-testId="remove-button"
             icon="pi pi-trash"></p-button>
         @if (isEditable) {
-        <p-button
-            (click)="onEdit()"
-            [label]="'dot.common.edit' | dm"
-            severity="secondary"
-            styleClass="p-button-outlined p-button-sm p-button-secondary"
-            data-testId="edit-button"
-            icon="pi pi-pencil"></p-button>
+            <p-button
+                (click)="onEdit()"
+                [label]="'dot.common.edit' | dm"
+                severity="secondary"
+                styleClass="p-button-outlined p-button-sm p-button-secondary"
+                data-testId="edit-button"
+                icon="pi pi-pencil"></p-button>
         }
     </div>
 
     <div class="preview-metadata__action--responsive">
         @if (isEditable) {
-        <p-button
-            (click)="onEdit()"
-            styleClass="p-button-rounded p-button-secondary p-button-text p-button-semi-transparent"
-            data-testId="edit-button-responsive"
-            icon="pi pi-pencil"></p-button>
+            <p-button
+                (click)="onEdit()"
+                styleClass="p-button-rounded p-button-secondary p-button-text p-button-semi-transparent"
+                data-testId="edit-button-responsive"
+                icon="pi pi-pencil"></p-button>
         }
         <p-button
             (click)="visibility = !visibility"
@@ -108,10 +112,10 @@
         <span class="file-info__title">{{ 'Size' | dm }}:</span>
         <div class="file-info__link">
             @if (metadata.width && metadata.height) {
-            <div class="file-info__size" data-testId="file-resolution">
-                <i class="pi pi-arrows-alt"></i>
-                <span>{{ metadata.width }}px, {{ metadata.height }}px</span>
-            </div>
+                <div class="file-info__size" data-testId="file-resolution">
+                    <i class="pi pi-arrows-alt"></i>
+                    <span>{{ metadata.width }}px, {{ metadata.height }}px</span>
+                </div>
             }
             <div class="file-info__size">
                 <i class="pi pi-file"></i>
@@ -120,26 +124,31 @@
         </div>
     </div>
 
-    @if (contentlet) { @for (sourceLink of this.resourceLinks(); track $index) { @if
-    (sourceLink.show) {
-    <div [attr.data-testId]="'resource-link-' + sourceLink.key" class="file-info__item">
-        <span class="file-info__title">{{ sourceLink.key | dm }}:</span>
-        <div class="file-info__link">
-            <a [href]="sourceLink.value" target="_blank">{{
-                sourceLink.value || ('dot.binary.field.no.link.found' | dm)
-            }}</a>
-            <dot-copy-button [copy]="sourceLink.value" />
-        </div>
-    </div>
-    } } @empty { @for (item of [1, 2, 3, 4]; track $index) {
-    <div class="file-info__item file-info__loading">
-        <p-skeleton height="1.5rem" width="4rem" />
-        <div class="file-info__link">
-            <p-skeleton class="file-info__link" height="20px" width="100%" />
-            <p-skeleton size="20px" />
-        </div>
-    </div>
-    } } }
+    @if (contentlet) {
+        @for (sourceLink of this.resourceLinks(); track $index) {
+            @if (sourceLink.show) {
+                <div [attr.data-testId]="'resource-link-' + sourceLink.key" class="file-info__item">
+                    <span class="file-info__title">{{ sourceLink.key | dm }}:</span>
+                    <div class="file-info__link">
+                        <a [href]="sourceLink.value" target="_blank">{{
+                            sourceLink.value || ('dot.binary.field.no.link.found' | dm)
+                        }}</a>
+                        <dot-copy-button [copy]="sourceLink.value" />
+                    </div>
+                </div>
+            }
+        } @empty {
+            @for (item of [1, 2, 3, 4]; track $index) {
+                <div class="file-info__item file-info__loading">
+                    <p-skeleton height="1.5rem" width="4rem" />
+                    <div class="file-info__link">
+                        <p-skeleton class="file-info__link" height="20px" width="100%" />
+                        <p-skeleton size="20px" />
+                    </div>
+                </div>
+            }
+        }
+    }
 
     <ng-template pTemplate="footer">
         <p-button
