--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
@@ -1,30 +1,30 @@
 <div class="w-full category-list__header">Root</div>
 <div
-    class="flex-1 category-list__category-list"
-    [ngClass]="{ 'no-overflow-x-yet': emptyColumns().length }">
+    [ngClass]="{ 'no-overflow-x-yet': emptyColumns().length }"
+    class="flex-1 category-list__category-list">
     @for (column of categories(); let index = $index; track index) {
     <!--dynamic columns-->
-    <div class="category-list__category-column" #categoryColumn data-testId="category-column">
+    <div #categoryColumn class="category-list__category-column" data-testId="category-column">
         @for (item of column; track item.inode) {
         <div
+            data-testId="category-item"
             class="flex align-content-center align-items-center category-list__item"
             [ngClass]="{ 'category-list__item--selected': item.checked }"
-            (click)="itemClicked.emit({ index, item })"
-            data-testId="category-item">
+            (click)="itemClicked.emit({ index, item })">
             <p-checkbox [(ngModel)]="itemsSelected" [value]="item.key" />
 
             <label
+                data-testId="category-item-label"
                 class="flex flex-grow-1 category-list__item-label"
                 [ngClass]="{ 'cursor-pointer': item.childrenCount > 0 }"
                 [for]="item.key"
-                data-testId="category-item-label"
                 >{{ item.categoryName }}</label
             >
 
             @if (item.childrenCount > 0) {
             <i
-                class="pi pi-chevron-right category-list__item-icon"
-                data-testId="category-item-with-child"></i>
+                data-testId="category-item-with-child"
+                class="pi pi-chevron-right category-list__item-icon"></i>
             }
         </div>
         }
