last test cases

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -24,3 +24,11 @@
     (reloadFromDialog)="reloadFromDialog()"
     #dialog
     data-testId="ema-dialog"></dot-edit-ema-dialog>
+<p-confirmDialog
+    [style]="{
+        width: '400px'
+    }"
+    rejectIcon="hidden"
+    acceptIcon="hidden"
+    rejectButtonStyleClass="p-button-outlined"
+    data-testId="confirm-dialog"></p-confirmDialog>
