--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -28,6 +28,7 @@
     [style]="{
         width: '400px'
     }"
+    key="shell-confirm-dialog"
     rejectIcon="hidden"
     acceptIcon="hidden"
     rejectButtonStyleClass="p-button-outlined"
