--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
@@ -54,10 +54,13 @@
                     }
                     @if (systemOptions().allowGenerateImg) {
                         <p-button
+                            [disabled]="!$isAIPluginInstalled()"
+                            tooltipPosition="bottom"
+                            [pTooltip]="$tooltipTextAIBtn()"
                             (click)="openDialog(BinaryFieldMode.AI)"
                             [label]="'dot.binary.field.action.generate.with.dotai' | dm"
                             data-testId="action-ai-btn"
-                            styleClass="p-button-link p-button-secondary p-button-sm">
+                            styleClass="p-button-link p-button-secondary p-button-sm pointer-events-auto">
                             <svg
                                 fill="none"
                                 height="22"
