feat(uve): Ask user to create page if the language doesnt exist #28958 (#29076)
## Proposed changes

- Fetch languages for the current page and check whether or not it has a
translation. If it has one we let the user pass, if not we prompt to
know if the user wants to create a page or not.

### Screenshot


https://github.com/dotCMS/core/assets/63567962/7d20eb2d-e747-4ebc-977e-1fb765d704ed

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -24,3 +24,12 @@
     (reloadFromDialog)="reloadFromDialog()"
     #dialog
     data-testId="ema-dialog"></dot-edit-ema-dialog>
+<p-confirmDialog
+    [style]="{
+        width: '400px'
+    }"
+    key="shell-confirm-dialog"
+    rejectIcon="hidden"
+    acceptIcon="hidden"
+    rejectButtonStyleClass="p-button-outlined"
+    data-testId="confirm-dialog"></p-confirmDialog>
