--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/components/dot-locale-create-edit/dot-locale-create-edit.component.html
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/components/dot-locale-create-edit/dot-locale-create-edit.component.html
@@ -21,7 +21,9 @@
         <div class="field">
             <label for="isoCodeEdit">{{ 'locale.id' | dm }}</label>
             <span class="p-input-icon-right">
-                <i [cdkCopyToClipboard]="localeIDInput.value" class="pi pi-copy"></i>
+                @if (localeIDInput.value) {
+                    <dot-copy-button [copy]="localeIDInput.value" customClass="p-button-rounded" />
+                }
                 <input
                     id="isoCodeEdit"
                     #localeIDInput
@@ -34,7 +36,11 @@
         <div class="field">
             <label for="id">{{ 'locale.language.id' | dm }}</label>
             <span class="p-input-icon-right">
-                <i [cdkCopyToClipboard]="languageIDInput.value" class="pi pi-copy"></i>
+                @if (languageIDInput.value) {
+                    <dot-copy-button
+                        [copy]="languageIDInput.value"
+                        customClass="p-button-rounded" />
+                }
                 <input
                     id="id"
                     #languageIDInput
@@ -105,10 +111,11 @@
             <div class="field">
                 <label for="isoCode">{{ 'locale.id' | dm }}</label>
                 <span class="p-input-icon-right">
-                    <dot-copy-button
-                        [copy]="isoCodeInput.value"
-                        *ngIf="isoCodeInput.value"
-                        customClass="p-button-rounded" />
+                    @if (isoCodeInput.value) {
+                        <dot-copy-button
+                            [copy]="isoCodeInput.value"
+                            customClass="p-button-rounded" />
+                    }
                     <input
                         [placeholder]="'locale.id.placeholder' | dm"
                         id="isoCode"
