--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -25,8 +25,8 @@
             <div class="category-field__search">Input Search</div>
             <div class="flex-grow-1 category-field__categories">
                 <dot-category-field-category-list
-                    (itemChecked)="itemChecked($event)"
-                    (itemClicked)="itemClicked($event)"
+                    (itemChecked)="store.updateSelected($event.selected, $event.item)"
+                    (itemClicked)="store.getCategories($event)"
                     [categories]="store.categoryList()"
                     [selected]="store.selectedCategoriesValues()" />
             </div>
