--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -1,19 +1,17 @@
-<!-- @if (context()?.pageAsset; as pageAsset) { -->
+@if (context()?.pageAsset; as pageAsset) {
     <div class="flex flex-col min-h-screen gap-6 bg-neutral-50">
-        <!-- @if(pageAsset.layout.header){ -->
+        @if(pageAsset.layout.header){
             <app-header>
                 <app-navigation [items]="context()?.nav.children" />
             </app-header>
-        <!-- } -->
+        }
 
-        <!-- <pre style="width: 500px; height: 500px; overflow: scroll;"><code>{{pageContextService.pageContextValue | json}}</code></pre> -->
-            
         <main class="container flex flex-col gap-8 m-auto">
             <dotcms-layout [pageAsset]="context()?.pageAsset" [components]="components()" />
         </main>
 
-        <!-- @if(pageAsset.layout.footer){ -->
+        @if(pageAsset.layout.footer){
             <app-footer />
-        <!-- } -->
+        }
     </div>
-<!-- } -->
+}
