--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -25,9 +25,10 @@
             <div class="category-field__search">Input Search</div>
             <div class="flex-grow-1 category-field__categories">
                 <dot-category-field-category-list
-                    (itemClicked)="itemClicked($event)"
+                    (itemChecked)="store.updateSelected($event.selected, $event.item)"
+                    (itemClicked)="store.getCategories($event)"
                     [categories]="store.categoryList()"
-                    [selected]="store.selectedCategories()" />
+                    [selected]="store.selectedCategoriesValues()" />
             </div>
         </div>
 
