chore(editor-content): fix error with binary field in old editor

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
@@ -90,7 +90,7 @@
                     (editImage)="onEditImage()"
                     (removeFile)="removeFile()"
                     [contentlet]="vm.contentlet"
-                    [editableImage]="vm.isEnterprise && $imageEditor()"
+                    [editableImage]="vm.isEnterprise && imageEditor"
                     [tempFile]="vm.tempFile"
                     [fieldVariable]="$variable()"
                     data-testId="preview" />
